верстка мобильной версииЭ

--- a/less/fonts.less
+++ b/less/fonts.less
@@ -22,3 +22,11 @@
     font-weight: light;
     font-style:  normal;
 }
+@font-face {
+  font-family: 'fjallaone';
+  src: local('fjallaone'),
+         url('../fonts/fjallaone-regular-webfont.woff2') format('woff2');         
+    font-weight: normal;
+    font-style:  normal;
+}
+
