--- a/less/style.less
+++ b/less/style.less
@@ -1,9 +1,15 @@
 @import "normalize.less";
 @import "fonts.less";
 @import "global.less";
-/*
 @import "variables.less";
 @import "mixins.less";
+
+@import "blocks/nav.less";
+@import "blocks/about.less";
+@import "blocks/teachers.less";
+@import "blocks/social.less";
+
+/*@import "mixins.less";
 
 @import "blocks/header.less";
 @import "blocks/nav.less";
