--- a/less/style.less
+++ b/less/style.less
@@ -8,6 +8,9 @@
 @import "blocks/about.less";
 @import "blocks/teachers.less";
 @import "blocks/social.less";
+@import "blocks/schedule.less";
+@import "blocks/contacts.less";
+@import "blocks/footer.less";
 
 /*@import "mixins.less";
 
