--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,4 @@
-@mobiles: ~"(min-width: 300px)";
+@mobiles: ~"(min-width: 280px)";
 @tablets: ~"(min-width: 700px)";
 @desktops: ~"(min-width: 1200px)";
 
@@ -9,7 +9,9 @@
 @menu-hover-color: #ec1de0; //#d22856; // цвет hover меню
 
 @social-item-size: 40px;   // размер социальных кнопок
-@teachers-border: #5d82aa;    // цвет обводки article для преподавателей
+@teachers-border: #5d82aa; // цвет обводки article для преподавателей
+@iframe-color: #5d82aa;
+@padding-title: 20px;      // отступы в заголовках
 /*
 @header-bg: #1d2631;
 @pages-bg: #ffffff;            // background страниц
