--- a/less/blocks/teachers.less
+++ b/less/blocks/teachers.less
@@ -6,9 +6,10 @@
     text-align: center;
   }
   .teachers__title {
-    margin-top: 20px;
+    //margin-top: 20px;
     margin-bottom: 20px;
     //text-align: center;
+    padding-top: @padding-title;
   }  
   .teachers__photo {
     display: block;
@@ -21,10 +22,18 @@
   }
   .teachers__item {
     //width: 80%;
-    max-width: 300px;
+    width: 300px;
     //text-align: center;
-    margin: 0 auto;
+    //margin: 0 auto;
+    margin-bottom: 30px;
+    
     border: 1px solid @teachers-border;
     border-radius: 0 0 10px 10px;
+  }
+  .teachers__items {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;   
+    justify-content: space-around;
   }
 }
