исправлены ошибки в мобильной верстке

--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -5,16 +5,20 @@
     
     text-align: center;
   }
-  .contacts__map {
+  .contacts__map {    
     //text-align: center;
     //width: 100%;
-    height: 100vw - 100vw*0.25; // размер картинки 320х240, желаем примерно 
-                                // пропорционально
-    //height: 100vw;
-    
-    background: 
-      url("../images/map_320x240.jpg") no-repeat,
-      url("../images/map_320x240.webp") no-repeat;
-    background-size: cover;    
+    //height: 100vw - 100vw*0.25; // размер картинки 320х240, желаем примерно 
+                                // пропорционально    
+    //min-height: 240px;
+    /*background: 
+      url("../images/map_320x240.jpg") no-repeat;
+    background-size: cover;   */ 
+  }
+  .contacts {
+    text-align: center;
+  }
+  .contacts img {
+    width: 100%;
   }
 }
