--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -1,5 +1,6 @@
 @media @mobiles {
   .footer {    
+    margin-top: -4px;
     padding: 30px;
     text-align: center;
     background-color: @menu-bg; // footer делаем того же цвета что и верхнее меню
@@ -12,8 +13,7 @@
     
     color: @menu-color;
     //border-bottom: 2px dashed @menu-color;
-    &:hover,
-    &:active {
+    &:hover {
       color: @menu-hover-color;
     }
   }
@@ -23,8 +23,8 @@
   }
   .footer svg {  
     padding-top: 10px; 
-    width: 40px;
-    height: 40px;    
+    width: 45px;
+    height: 45px; 
   }
   .footer #geolocation {
     stroke: #ffffff;
