--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -1,6 +1,4 @@
 @media @mobiles {
-  @social-item-size: 45px;
-  
   .social__item {
     display: inline-block;
   }
@@ -18,10 +16,6 @@
     width: @social-item-size;
     height: @social-item-size;    
   }
-  .social__item .social__item--footer svg {
-    width: @social-item-size;
-    height: @social-item-size;
-  }
   #social__item--vk {
     fill: blue;
   }
@@ -34,12 +28,12 @@
   #social__item--inst {
     fill: #080911;
   }
-  .social__item--footer #social__item--vk,
+  /*.social__item--footer #social__item--vk,
   .social__item--footer #social__item--fb,
   .social__item--footer #social__item--tw,
   .social__item--footer #social__item--inst {
     fill: #ffffff;
-  } 
+  } */
   /*.social__item--vk svg {
     width: @social-item-size;
     height: @social-item-size;
