добавлен hover для иконок в подвале

--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -5,7 +5,11 @@
   .social__item:hover #social__item--vk,
   .social__item:hover #social__item--fb,
   .social__item:hover #social__item--tw,
-  .social__item:hover #social__item--inst {
+  .social__item:hover #social__item--inst,
+  .social__item:hover #social__item-footer--vk,
+  .social__item:hover #social__item-footer--fb,
+  .social__item:hover #social__item-footer--tw,
+  .social__item:hover #social__item-footer--inst {
     opacity: 0.5;
   }  
   .social__item {
