--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -22,7 +22,7 @@
     stroke: @menu-hover-color;
   }
   .footer svg {  
-    padding-top: 10px; 
+    margin-top: 10px; 
     width: 45px;
     height: 45px; 
   }
