Добавлены wrapperы. Исправлен адрес фотографии для тренера Галя

--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -1,16 +1,20 @@
 @media @mobiles {
-  .footer {    
+  .footer {
     margin-top: -4px;
-    padding: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     text-align: center;
     background-color: @menu-bg; // footer делаем того же цвета что и верхнее меню
   }
+  .footer__wrapper {
+    .set-wrap(20px, 20px);
+  }
   .footer__phone {
     display: block;
-    
+
     margin-top: 15px;
     margin-bottom: 15px;
-    
+
     color: @menu-color;
     //border-bottom: 2px dashed @menu-color;
     &:hover {
@@ -21,15 +25,15 @@
   .footer__phone:active #smartphone {
     stroke: @menu-hover-color;
   }
-  .footer svg {  
-    margin-top: 10px; 
+  .footer svg {
+    margin-top: 10px;
     width: 45px;
-    height: 45px; 
+    height: 45px;
   }
   .footer #geolocation {
     stroke: #ffffff;
   }
   .footer #smartphone {
     stroke: #ffffff;
-  }  
+  }
 }
