--- a/less/blocks/schedule.less
+++ b/less/blocks/schedule.less
@@ -1,9 +1,12 @@
 @media @mobiles {
   .schedule {
     text-align: center;
-  
-    padding-left: 20px;
-    padding-right: 20px;
+
+    //padding-left: 20px;
+    //padding-right: 20px;
+  }
+  .schedule__wrapper {
+    .set-wrap(20px, 20px);
   }
   .schedule__title {
     padding-top: @padding-title;
@@ -13,5 +16,6 @@
     //height: 100vh;
     //border: 1px solid @iframe-color;
     border: none;
-  }   
+    //height: 1360px;
+  }
 }
