--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -1,12 +1,14 @@
 @media @mobiles {
   .about {
-    padding-left: 20px;
-    padding-right: 20px;
+    //background-color: green;
+  }
+  .about__wrapper {
+    .set-wrap(20px, 20px);
   }
   .about__title {
     //width: 100px;
     padding-top: @padding-title;
-    
+
     text-align: center;
   }
   .about__text {
