--- a/less/global.less
+++ b/less/global.less
@@ -1,5 +1,6 @@
 html, body {
   //height: 100%;  
+  box-sizing: border-box;
 }
 body {
   min-width: 320px;
@@ -20,4 +21,3 @@ address {
 figure, p {
   margin: 0;
 }
-
