--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,8 @@
 @mobiles: ~"(min-width: 280px)";
-@tablets: ~"(min-width: 700px)";
+@tablets: ~"(min-width: 800px)";
 @desktops: ~"(min-width: 1200px)";
+
+@max-width: 1280px;
 
 @menu-bg: #5d82aa; //#283645;      // фон пунктов меню
 @inner-shadow: #789abf; //#485461;  // тени между пунктами меню
