--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -15,3 +15,10 @@
     text-align: center;
   }
 }
+
+@media @desktops {
+  .about__wrapper {
+    max-width: @max-width;
+    margin: 0 auto;
+  }
+}
