--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -37,3 +37,45 @@
     stroke: #ffffff;
   }
 }
+
+@media @tablets {
+  .footer__wrapper {
+    max-width: @max-width;
+    margin: 0 auto;
+    
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;    
+  }
+  .footer__address {
+    width: 250px;
+  }
+  .footer__address, 
+  .footer__phone {
+    margin-right: 30px;
+  }
+  .footer__phone {
+  }
+}
+
+@media desktops {
+  .footer__wrapper {
+    max-width: @max-width;
+    margin: 0 auto;
+    
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;    
+  }
+  .footer__address {
+    width: 250px;
+  }
+  .footer__address, 
+  .footer__phone {
+    margin-right: 30px;
+  }
+}
