--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -2,7 +2,6 @@
   .nav__wrapper {
     display: flex;
     flex-direction: column;
-
     //.set-wrap(20px, 20px);
   }
   .nav {
@@ -123,5 +122,12 @@
     &--hidden {
       display: none;
     }
+  }
+}
+
+@media @desktops {
+  .nav__wrapper {
+    max-width: @max-width;
+    margin: 0 auto;
   }
 }
