--- a/less/blocks/schedule.less
+++ b/less/blocks/schedule.less
@@ -19,3 +19,10 @@
     //height: 1360px;
   }
 }
+
+@media @desktops {
+  .schedule__wrapper {
+    max-width: @max-width;
+    margin: 0 auto;
+  }
+}
