--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -53,3 +53,14 @@
     //background-image: url('../images/instagram.svg');
   }*/
 }
+
+@media @tablets {
+  .social {
+    padding-top: 20px;
+  }
+}
+@media @desktops {
+  .social {
+    padding-top: 20px;
+  }
+}
