Доделана планшетная и десктопная версии

--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -5,6 +5,10 @@
     padding-bottom: 30px;
     text-align: center;
     background-color: @menu-bg; // footer делаем того же цвета что и верхнее меню
+    flex: 0 0 auto;
+  }
+  .footer__address {
+    color: #ffffff;
   }
   .footer__wrapper {
     .set-wrap(20px, 20px);
