--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,7 @@
 
 @max-width: 1280px;
 
+@backg-color: #ffffff;            // цвет страницы
 @menu-bg: #5d82aa; //#283645;      // фон пунктов меню
 @inner-shadow: #789abf; //#485461;  // тени между пунктами меню
 @drop-shadow: #376fac; //#000000;
