--- a/less/variables.less
+++ b/less/variables.less
@@ -10,6 +10,7 @@
 @drop-shadow: #376fac; //#000000;
 @menu-color: #ffffff;   // цвет текста в пунктах меню
 @menu-hover-color: #ec1de0; //#d22856; // цвет hover меню
+@menu-desktop-color: #5d82aa;
 
 @social-item-size: 45px;   // размер социальных кнопок
 @teachers-border: #5d82aa; // цвет обводки article для преподавателей
