--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -5,7 +5,7 @@
     //.set-wrap(20px, 20px);
   }
   .nav {
-    background-color: @menu-bg;
+    background-color: @menu-bg;    
   }
   .nav__menu {
     position: relative;
@@ -97,6 +97,9 @@
     }
   }
   .nav__logo {
+    display: none;
+  }
+  .nav__logo-text {
     display: inline-block;
 
     margin-top: 23px;
@@ -129,12 +132,25 @@
 }
 
 @media @desktops {
+  .nav {
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    background-color: @backg-color; 
+    //background: linear-gradient(to top, @menu-bg 0%, @backg-color 60%);
+    box-shadow: 0 10px 10px -10px @menu-bg; 
+  }
+  .nav__menu {
+    border-bottom: none;
+  }
   .nav__wrapper {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
     
     max-width: @max-width;
-    margin: 0 auto;    
+    margin: 0 50px;        
+    
   }
   .nav__btn {
     display: none;
@@ -149,6 +165,12 @@
     //border-top: none;
     //border-bottom: none;
   }
+  .nav__logo-text {
+    display: none;
+  }
+  .nav__logo {
+    display: block;
+  }
   .nav__link {
     position: relative;
     
@@ -158,9 +180,10 @@
     border-top: none;
     border-bottom: none;
     
-    &:hover::after {
-      //background-color: @backg-color;
-      
+    .set-font('Open Sans', bold, 18px, @menu-desktop-color);
+    
+    /*
+    &:hover::after {  
       content: "";
       position: absolute;
       
@@ -171,23 +194,31 @@
       height: 5px;
       
       animation: border-link  0.3s ease-in-out forwards;
-    }
+    }*/
   }
   @keyframes border-link {    
     to   { background-color: @backg-color; }
   }
   .nav__feedback--item {
     text-align: center;
-    color: #ffffff;
+    
+    .set-font('Open Sans', bold, 14px, @menu-desktop-color);
+    
     cursor: pointer;
-    border-bottom: 1px dashed #ffffff;
+    
+    border-bottom: 1px dashed @menu-desktop-color;
+    
     &:hover {
       color: @menu-hover-color;
+    }
+    &:first-of-type {
+      margin-bottom: 10px;
     }
   }
   .nav__feedback {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    //align-self: stretch;
   }
 }
