--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -194,7 +194,7 @@
       height: 5px;
       
       animation: border-link  0.3s ease-in-out forwards;
-    }*/
+    }*
   }
   @keyframes border-link {    
     to   { background-color: @backg-color; }
