--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -5,7 +5,7 @@
     //.set-wrap(20px, 20px);
   }
   .nav {
-    background-color: @menu-bg;    
+    background-color: @menu-bg;
   }
   .nav__menu {
     position: relative;
@@ -136,9 +136,9 @@
     padding-top: 5px;
     padding-bottom: 5px;
 
-    background-color: @backg-color; 
+    background-color: @backg-color;
     //background: linear-gradient(to top, @menu-bg 0%, @backg-color 60%);
-    box-shadow: 0 10px 10px -10px @menu-bg; 
+    box-shadow: 0 10px 10px -10px @menu-bg;
   }
   .nav__menu {
     border-bottom: none;
@@ -147,10 +147,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    
+
     max-width: @max-width;
-    margin: 0 50px;        
-    
+    margin: 0 50px;
+
   }
   .nav__btn {
     display: none;
@@ -161,7 +161,7 @@
   }
   .nav__item {
     margin-left: 20px;
-    margin-right: 20px;    
+    margin-right: 20px;
     //border-top: none;
     //border-bottom: none;
   }
@@ -173,41 +173,41 @@
   }
   .nav__link {
     position: relative;
-    
+
     transition-property: color;
     transition-duration: 0.5s;
-    
+
     border-top: none;
     border-bottom: none;
-    
+
     .set-font('Open Sans', bold, 18px, @menu-desktop-color);
-    
+
     /*
-    &:hover::after {  
+    &:hover::after {
       content: "";
       position: absolute;
-      
+
       width: 100%;
-      
+
       left: 0;
-      bottom: -7px;      
+      bottom: -7px;
       height: 5px;
-      
+
       animation: border-link  0.3s ease-in-out forwards;
-    }*
+    }*/
   }
-  @keyframes border-link {    
+  @keyframes border-link {
     to   { background-color: @backg-color; }
   }
   .nav__feedback--item {
     text-align: center;
-    
+
     .set-font('Open Sans', bold, 14px, @menu-desktop-color);
-    
+
     cursor: pointer;
-    
+
     border-bottom: 1px dashed @menu-desktop-color;
-    
+
     &:hover {
       color: @menu-hover-color;
     }
