--- a/less/style.less
+++ b/less/style.less
@@ -11,6 +11,7 @@
 @import "blocks/schedule.less";
 @import "blocks/contacts.less";
 @import "blocks/footer.less";
+@import "blocks/totop.less";
 
 /*@import "mixins.less";
 
