Добавлена кнопка для обратной связи ВК в правом углу меню

--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -17,6 +17,9 @@
 }
 
 @media @desktops {
+  .about {
+    padding-top: 70px;
+  }
   .about__wrapper {
     max-width: @max-width;
     margin: 0 auto;
