--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -133,6 +133,10 @@
 
 @media @desktops {
   .nav {
+    position: fixed;
+    width: 100%;
+    top: 0;
+
     padding-top: 5px;
     padding-bottom: 5px;
 
@@ -220,5 +224,9 @@
     flex-direction: column;
     justify-content: space-around;
     //align-self: stretch;
+  }
+  #nav__feedback-vk {
+    //position: relative !important;
+    top: 15px;
   }
 }
