--- a/less/blocks/teachers.less
+++ b/less/blocks/teachers.less
@@ -6,7 +6,7 @@
     text-align: center;
   }
   .teachers__wrapper {
-    .set-wrap(20px, 20px);    
+    .set-wrap(20px, 20px);
   }
   .teachers__title {
     //margin-top: 20px;
@@ -42,9 +42,12 @@
 }
 
 @media @desktops {
+  .teachers {
+    padding-top: 50px;
+  }
   .teachers__wrapper {
     max-width: @max-width;
-    margin: 0 auto;    
+    margin: 0 auto;
   }
   .teachers__item:hover {
     //box-shadow: 0 0 5px #000000;
