--- a/less/style.less
+++ b/less/style.less
@@ -11,7 +11,9 @@
 @import "blocks/schedule.less";
 @import "blocks/contacts.less";
 @import "blocks/footer.less";
+@import "blocks/header.less";
 @import "blocks/totop.less";
+
 
 /*@import "mixins.less";
 
