--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -2,18 +2,18 @@
   .contacts__title {
     padding-top: @padding-title;
     margin-bottom: 20px;
-    
+
     text-align: center;
   }
-  .contacts__map {    
+  .contacts__map {
     //text-align: center;
     //width: 100%;
-    //height: 100vw - 100vw*0.25; // размер картинки 320х240, желаем примерно 
-                                // пропорционально    
+    //height: 100vw - 100vw*0.25; // размер картинки 320х240, желаем примерно
+                                // пропорционально
     //min-height: 240px;
-    /*background: 
+    /*background:
       url("../images/map_320x240.jpg") no-repeat;
-    background-size: cover;   */ 
+    background-size: cover;   */
   }
   .contacts {
     text-align: center;
@@ -31,7 +31,7 @@
   .contacts__address {
     color: @menu-bg;
     text-align: center;
-    
+
     margin-bottom: 2em;
   }
 }
@@ -40,7 +40,7 @@
   .contacts {
     margin-bottom: 2em;
   }
-  .contacts__map, 
+  .contacts__map,
   .contacts__street-photo {
     //max-width: 345px;
     width: 100%;
@@ -59,12 +59,15 @@
     display: none;
   }
   .contacts__google-map {
-    //display: block;    
+    //display: block;
     //width: 100%;
-  }  
+  }
 }
 
 @media @desktops {
+  .contacts {
+    padding-top: 30px;
+  }
   .contacts__wrapper {
     max-width: @max-width;
     margin: 0 auto;
@@ -72,7 +75,7 @@
   .contacts__map {
     max-width: 600px;
     //margin-right: 30px;
-  } 
+  }
   .contacts__street-photo {
     max-width: 500px;
   }
