--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -158,8 +158,7 @@
     align-items: center;
 
     max-width: @max-width;
-    margin: 0 50px;
-
+    margin: 0 40px;
   }
   .nav__btn {
     display: none;
@@ -239,5 +238,11 @@
     //top: 15px;
     right: 10px;
     bottom: 10px;
+  }
+}
+
+@media @large-desktops {
+  .nav__wrapper {
+    margin: 0 auto;
   }
 }
