Добавлена кнопка перезвоните мне. Убраны width у ссылок для фотографий

--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -1,6 +1,7 @@
 @media @mobiles {
   .about {
     //background-color: green;
+    color: @text-color;
   }
   .about__wrapper {
     .set-wrap(20px, 20px);
@@ -8,7 +9,6 @@
   .about__title {
     //width: 100px;
     padding-top: @padding-title;
-
     text-align: center;
   }
   .about__text {
