--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -227,11 +227,16 @@
     //@menu-desktop-color
     .set-font('Open Sans', bold, 20px, #605d5c);
   }
+  .nav__feedback--callme {
+    .set-font('Open Sans', bold, 18px, #605d5c);
+  }
   .nav__feedback {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    //align-self: stretch;
+    align-self: stretch;
+
+    text-align: right;
   }
   #nav__feedback-vk {
     //position: relative !important;
