--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -13,8 +13,8 @@
     opacity: 0.5;
   }
   .social__item {
-    margin-left: 2px;
-    margin-right: 2px;
+    //margin-left: 2px;
+    //margin-right: 2px;
   }
   .social__item svg {
     position: absolute;
@@ -71,11 +71,11 @@
 
 @media @tablets {
   .social {
-    padding-top: 20px;
+    //padding-top: 20px;
   }
 }
 @media @desktops {
   .social {
-    padding-top: 20px;
+    //padding-top: 20px;
   }
 }
