--- a/less/variables.less
+++ b/less/variables.less
@@ -14,6 +14,7 @@
 @menu-hover-color: #ec1de0; //#d22856; // цвет hover меню
 @menu-desktop-color: #5d82aa;
 @text-color: #605d5c;      // цвет текста на страницах
+@footer-bg-color: #605d5c;
 
 @social-item-size: 45px;   // размер социальных кнопок
 @teachers-border: #5d82aa; // цвет обводки article для преподавателей
