--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -5,24 +5,11 @@
 
     text-align: center;
   }
-  .contacts__map {
-    //text-align: center;
-    //width: 100%;
-    //height: 100vw - 100vw*0.25; // размер картинки 320х240, желаем примерно
-                                // пропорционально
-    //min-height: 240px;
-    /*background:
-      url("../images/map_320x240.jpg") no-repeat;
-    background-size: cover;   */
-  }
   .contacts {
     text-align: center;
   }
   .contacts img {
     width: 100%;
-  }
-  .contacts__map-title, .contacts__street-title {
-    color: @menu-bg;
   }
   .contacts__google-map {
     width: 100%;
@@ -39,16 +26,7 @@
   .contacts {
     margin-bottom: 2em;
   }
-  .contacts__map,
-  .contacts__street-photo {
-    //max-width: 345px;
-    width: 100%;
-    max-width: 600px;
-  }
   .contacts__map {
-    //margin-right: 30px;
-  }
-  .contacts__flex {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -57,9 +35,13 @@
   .contacts__yandex-map {
     display: none;
   }
+  .contacts__address,
   .contacts__google-map {
-    //display: block;
-    //width: 100%;
+    width: 48%;
+  }
+  .contacts__address {
+    box-sizing: border-box;
+    padding: 30px;
   }
 }
 
@@ -72,7 +54,7 @@
     margin: 0 auto;
   }
   .contacts__map {
-    max-width: 600px;
+    //max-width: 600px;
     //margin-right: 30px;
   }
   .contacts__street-photo {
