--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -4,7 +4,7 @@
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
-    background-color: @menu-bg; // footer делаем того же цвета что и верхнее меню
+    background-color: @footer-bg-color; // footer серым
     flex: 0 0 auto;
   }
   .footer__address {
@@ -30,7 +30,7 @@
     stroke: @menu-hover-color;
   }
   .footer svg {
-    margin-top: 10px;
+    //margin-top: 10px;
     width: 45px;
     height: 45px;
   }
