Сделана функция уменьшения меню при прокрутке

--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -1,6 +1,6 @@
 @media @mobiles {
   .footer {
-    margin-top: -4px;
+    margin-top: 0; //-4px;
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
