--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -268,8 +268,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-self: stretch;
-
+    //align-self: stretch;
+    align-self: center;    
     text-align: right;
   }
   #nav__feedback-vk {
