Добавлен класс для маленького меню nav--small

--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -168,11 +168,25 @@
 
     padding-top: 5px;
     padding-bottom: 5px;
-
-    //background-color: @backg-color;
-    //background: linear-gradient(to top, @menu-bg 0%, @backg-color 60%);
-    //box-shadow: 0 10px 10px -10px @menu-bg;
+}
+  .nav--small .nav__logo {
+    display: none;
   }
+  .nav--small .nav__feedback--tel {
+    display: none;
+  }
+  .nav--small .nav__link {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+  .nav--small .nav__feedback-item:first-of-type {
+    margin-bottom: 0;
+  }
+  .nav--small .nav__logo-text {
+    display: block;
+    margin-top: 0;
+  }
+  
   .nav__menu {
     //border-bottom: none;
     display: none;
