Добавляем фотографию для блока с адресом

--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -39,10 +39,12 @@
   .contacts__google-map {
     width: 48%;
   }
-  .contacts__address {
+  .contacts__address {  
     box-sizing: border-box;
     padding: 30px;
-  }
+    margin-right: 20px;
+    margin-bottom: 0;       
+  }   
 }
 
 @media @desktops {
