--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -16,9 +16,41 @@
     display: block;
   }
   .contacts__address {
-    text-align: center;
-
-    margin-bottom: 2em;
+    position: relative;
+    min-height: 300px;
+    
+    text-align: center; 
+    margin-bottom: 0.2em;  
+  }
+  .contacts__address-map {
+    position: absolute;    
+    z-index: 1;
+    
+    width: 100%;    
+    height: 100%;
+    
+    left: 0;
+    top: 0;
+  
+    background: url('../images/sky-street.jpg') no-repeat;
+    background-size: cover;
+    
+    opacity: 0.2;    
+    transition-property: opacity;
+    transition-duration: 0.5s;  
+  }
+  .contacts__address-text:hover ~ .contacts__address-map {
+    opacity: 0.7;
+  }
+  .contacts__address-text {
+    position: relative;
+    z-index: 2;
+    cursor: pointer;
+    transition-property: opacity;
+    transition-duration: 0.5s;
+    &:hover {
+      opacity: 0.2;  
+    }
   }
 }
 
@@ -43,7 +75,7 @@
     box-sizing: border-box;
     padding: 30px;
     margin-right: 20px;
-    margin-bottom: 0;       
+    //margin-bottom: 0;       
   }   
 }
 
