Добавление формы обратной связи (перезвоните мне)

--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -271,6 +271,8 @@
     //.set-font('Open Sans', bold, 20px, #605d5c);
   }
   .nav__feedback--callme {
+    border-bottom: 1px dashed @menu-color;
+    
     transition-property: opacity;
     transition-duration: 0.5s;
     &:hover {
