--- a/less/style.less
+++ b/less/style.less
@@ -13,6 +13,7 @@
 @import "blocks/footer.less";
 @import "blocks/header.less";
 @import "blocks/totop.less";
+@import "blocks/feedback.less";
 
 
 /*@import "mixins.less";
