доделываем форму обратной связи

--- a/less/global.less
+++ b/less/global.less
@@ -24,3 +24,13 @@ address {
 figure, p {
   margin: 0;
 }
+button {
+  margin: 0;
+  padding: 0;
+  &, 
+  &:active,
+  &:focus {
+    outline: 0;
+    border: 0;
+  }
+}
