--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -1,4 +1,4 @@
-@media @tablets {
+@media @desktops {
   .feedback {    
     position: fixed;
     z-index: 3;
@@ -10,7 +10,7 @@
     margin: auto;
     
     width: 300px;
-    height: 200px;
+    //height: 200px;
     
     border: 1px solid green;
   }
@@ -36,8 +36,6 @@
     height: 25px;
 
     cursor: pointer;
-    padding: 0;
-    margin: 0;
     
     background-color: transparent;
     
@@ -69,6 +67,32 @@
     &:hover::after {
       //background-color: @menu-hover-color;
       opacity: 0.8;
+    }
+  }
+  .feedback__form-block {
+    padding: 15px;
+    background-color: @backg-color;
+    text-align: center;
+    
+    & input[type="text"] {      
+      margin-bottom: 15px;
+    }
+  }
+  .feedback__form-submit {
+    display: inline-block;
+    
+    padding: 7px 20px;
+    
+    //border-radius: 10px;
+    
+    background-color: @menu-bg;
+    color: @menu-color;
+    
+    cursor: pointer;
+    &:active,
+    &:focus {
+      outline: 0;
+      border: 0;
     }
   }
 }
