добавлено окно для обратной связи

--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -1,3 +1,11 @@
+@media @mobiles {
+  .feedback {
+    &--hidden {
+      display: none;
+    }
+  }
+}
+
 @media @desktops {
   .feedback {    
     position: fixed;
