--- a/less/style.less
+++ b/less/style.less
@@ -14,7 +14,7 @@
 @import "blocks/header.less";
 @import "blocks/totop.less";
 @import "blocks/feedback.less";
-
+@import "blocks/overlay.less";
 
 /*@import "mixins.less";
 
