--- a/less/variables.less
+++ b/less/variables.less
@@ -8,6 +8,8 @@
 
 @backg-color: #ffffff;            // цвет страницы
 @menu-bg: #5d82aa; //#283645;      // фон пунктов меню
+@address-title: @menu-bg;
+@address-text: #000000;
 @inner-shadow: #789abf; //#485461;  // тени между пунктами меню
 @drop-shadow: #376fac; //#000000;
 @menu-color: #ffffff;   // цвет текста в пунктах меню
