--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -20,7 +20,7 @@
     width: 300px;
     //height: 200px;
     
-    border: 1px solid green;
+    //border: 1px solid green;
   }
   .feedback__header {
     padding: 15px;
