--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -16,12 +16,12 @@
     right: 0;
     
     margin: auto;
+    margin-top: -120px;
     
     width: 300px;
-    //height: 200px;
-    
-    //border: 1px solid green;
+    //animation: showFeedback 0.4s ease-in-out forwards; 
   }
+  
   .feedback__header {
     padding: 15px;
     
@@ -102,5 +102,8 @@
       outline: 0;
       border: 0;
     }
+  }
+  .feedback__request-success {
+    padding-top: 15px;
   }
 }
