Добавлена валидация формы обратной связи

--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -85,6 +85,15 @@
     & input[type="text"] {      
       margin-bottom: 15px;
     }
+    & label.error { 
+      //display: block;    
+      margin-top: -15px;
+      
+      font-size: 10px;
+      
+      color: red;
+      
+    }
   }
   .feedback__form-submit {
     display: inline-block;
